--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+        <link rel="stylesheet" type="text/css" href="<%= BASE_URL %>main.css">
         <title>HTTP Shortcuts Editor</title>
-        <style type="text/css">
-            html, body {
-                margin: 0
-            }
-        </style>
     </head>
     <body>
         <noscript>
